<resources>
    <string name="app_name">imc</string>
    <string name="imc_result">\??</string>
    <string name="app_title">IMC Test</string>
    <string name="taille_label">Taille</string>
    <string name="poids_hint">Enter votre poids</string>
    <string name="poids_label">Poids</string>
    <string name="taille_hint">Enter votre taille</string>
    <string name="weight_unit">Kg</string>
    <string name="height_unit">cm</string>
    <string name="confirm_btn">Calculer</string>
    <string name="result_title">Resultat</string>
</resources>